--- a/index.html
+++ b/index.html
@@ -1,76 +1,39 @@
-<html> 
-   <head> 
-      <script> 
-         //function that display value 
-         function dis(val) 
-         { 
-             document.getElementById("result").value+=val 
-         }
-         function solve()
-         {
-             let x = document.getElementById("result").value 
-             let y = eval(x)
-             document.getElementById("result").value = y
-         }
-         function clr() 
-         { 
-             document.getElementById("result").value = "" 
-         } 
-      </script> 
-      <style>
-         .title{ 
-         margin-bottom: 10px; 
-         text-align:center; 
-         width: 210px; 
-         color:green; 
-         border: solid black 2px;
-         }
-         input[type="button"] 
-         { 
-         background-color:transparent; 
-         color: black;
-         border: solid black 2px; 
-         width:100% 
-         }
-         input[type="text"] 
-         { 
-         background-color:white; 
-         border: solid black 2px; 
-         width:100% 
-         } 
-      </style> 
-   </head>
-   <body> 
-      <div class = title >Test Calculator By Mae</div> 
-      <table border="1">
-         <tr>
-            <td colspan="3"><input type="text" id="result"/></td>
-            <td><input type="button" value="c" onclick="clr()"/> </td> 
-         </tr> 
-         <tr> 
-            <td><input type="button" value="1" onclick="dis('1')"/> </td> 
-            <td><input type="button" value="2" onclick="dis('2')"/> </td> 
-            <td><input type="button" value="3" onclick="dis('3')"/> </td> 
-            <td><input type="button" value="/" onclick="dis('/')"/> </td> 
-         </tr> 
-         <tr> 
-            <td><input type="button" value="4" onclick="dis('4')"/> </td> 
-            <td><input type="button" value="5" onclick="dis('5')"/> </td> 
-            <td><input type="button" value="6" onclick="dis('6')"/> </td> 
-            <td><input type="button" value="-" onclick="dis('-')"/> </td> 
-         </tr> 
-         <tr> 
-            <td><input type="button" value="7" onclick="dis('7')"/> </td> 
-            <td><input type="button" value="8" onclick="dis('8')"/> </td> 
-            <td><input type="button" value="9" onclick="dis('9')"/> </td> 
-            <td><input type="button" value="+" onclick="dis('+')"/> </td> 
-         </tr> 
-         <tr>
-            <td><input type="button" value="." onclick="dis('.')"/> </td> 
-            <td><input type="button" value="0" onclick="dis('0')"/> </td> 
-            <td><input type="button" value="=" onclick="solve()"/> </td> 
-            <td><input type="button" value="*" onclick="dis('*')"/> </td> 
-         </tr> 
-      </table> 
-   </body> 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Messages | Firebase</title>
+    <link rel="stylesheet" href="./styles.css">
+</head>
+
+<body>
+    <div class="container">
+        <form action="" id="contactForm">
+            <div class="alert">Your message sent</div>
+
+            <div class="inputBox">
+                <input type="text" id="name" placeholder="Your name...." />
+            </div>
+
+            <div class="inputBox">
+                <input type="email" id="emailid" placeholder="Your Email....." />
+            </div>
+
+            <div class="inputBox">
+                <textarea id="msgContent" cols="30" rows="10" placeholder="Message"></textarea>
+            </div>
+
+            <div class="inputBox">
+                <button type="submit">Submit</button>
+            </div>
+        </form>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
+    <script src="./mail.js"></script>
+</body>
+
 </html>
